--- a/docs/index.css
+++ b/docs/index.css
@@ -1,1 +1,35 @@
+body * {
+    /* font-family: 'Kanit', sans-serif; */
+    font-family: 'Prompt', sans-serif;
+}
 
+body, html {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/TNI Cybersec Cover.png");
+    height: 100vh;
+    min-height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke;
+    font-size: 60px;
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    background-color: dimgray;
+}
