--- a/docs/index.css
+++ b/docs/index.css
@@ -11,6 +11,7 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    index: 0
 }
 
 .hero-text {
@@ -21,6 +22,7 @@ body, html {
     transform: translate(-50%, -50%);
     color: whitesmoke;
     font-size: 60px;
+    index: 1
 }
 
 #particles-js {
@@ -30,6 +32,7 @@ body, html {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    index: -1
 }
 
 @keyframes gradient {
