--- a/docs/index.css
+++ b/docs/index.css
@@ -11,7 +11,7 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    index: 0
+    z-index: 0
 }
 
 .hero-text {
@@ -22,13 +22,17 @@ body, html {
     transform: translate(-50%, -50%);
     color: whitesmoke;
     font-size: 60px;
-    index: 1
+    z-index: 2
 }
 
 #particles-js {
     width: 100%;
     height: 100%;
 /*     background-color: dimgray; */
+    z-index: 1
+}
+
+#rainbow-bg {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
