--- a/docs/index.css
+++ b/docs/index.css
@@ -1,3 +1,8 @@
+body * {
+    /* font-family: 'Kanit', sans-serif; */
+    font-family: 'Prompt', sans-serif;
+}
+
 body, html {
     width: 100%;
     height: 100%;
