--- a/docs/index.css
+++ b/docs/index.css
@@ -34,6 +34,7 @@ body, html {
     width: 100%;
     height: 100%;
 /*     background-color: dimgray; */
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     z-index: 1
 }
 
@@ -41,7 +42,7 @@ body, html {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    index: -1
+    z-index: -1
 }
 
 @keyframes gradient {
