--- a/docs/index.css
+++ b/docs/index.css
@@ -16,7 +16,7 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    z-index: 0
+    /* z-index: 0 */
 }
 
 .hero-text {
@@ -27,22 +27,22 @@ body, html {
     transform: translate(-50%, -50%);
     color: whitesmoke;
     font-size: 60px;
-    z-index: 2
+    /* z-index: 2 */
 }
 
 #particles-js {
     width: 100%;
     height: 100%;
-/*     background-color: dimgray; */
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    z-index: 1
+    background-color: salmon;
+    /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+    /* z-index: 1 */
 }
 
 #rainbow-bg {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
-    z-index: -1
+    /* z-index: -1 */
 }
 
 @keyframes gradient {
