--- a/docs/index.css
+++ b/docs/index.css
@@ -33,7 +33,7 @@ body, html {
 #particles-js {
     width: 100%;
     height: 100%;
-    background-color: salmon;
+    background-color: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
     /* z-index: 1 */
 }
