--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ h5.footer {
   }
 
 .bgimg404 {
-      background-image: url("https://imgur.com/WCxNrkM.gif");
+      background-image: url("https://c.tenor.com/_4YgA77ExHEAAAAd/rick-roll.gif");
       background-position: center;
       background-size: cover;
       min-height: 100%;
