Arrange assets folder

--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ h5.footer {
 }
 
 .bgimg {
-  background-image: url("img/Head.png");
+  background-image: url("../img/Head.png");
   background-position: center;
   background-size: cover;
   min-height: 100%;
@@ -891,17 +891,17 @@ h6 {
 }
 
 .type {
-  background: url(img/cybersec.jpg) no-repeat 50% 50%;
+  background: url(../img/cybersec.jpg) no-repeat 50% 50%;
   background-size: cover;
 }
 
 .type2 {
-  background: url(img/activity.jpg) no-repeat 50% 50%;
+  background: url(../img/activity.jpg) no-repeat 50% 50%;
   background-size: cover;
 }
 
 .type3 {
-  background: url(img/aboutme.png) no-repeat 50% 50%;
+  background: url(../img/aboutme.png) no-repeat 50% 50%;
   background-size: cover;
 }
 
