--- a/css/style.css
+++ b/css/style.css
@@ -225,11 +225,11 @@ p.list1 {
   font-size: 22px;
   background-color: rgba(255, 255, 255, 0.255);
   color: rgb(255, 255, 255) !important;
-  font-family: "Sriracha", sans-serif !important;
+  font-family: "Mitr", sans-serif !important;
 }
 
 p.list2 {
-  font-size: 12px;
+  font-size: 18px;
   background-color: rgba(255, 255, 255, 0.255);
   color: rgb(255, 255, 255) !important;
   font-family: "Athiti", sans-serif !important;
