--- a/css/style.css
+++ b/css/style.css
@@ -907,12 +907,12 @@ h6 {
 }
 
 .type {
-  background: url(../img/cybersec.jpg) no-repeat 50% 50%;
+  background: url(../img/cybersec.png) no-repeat 50% 50%;
   background-size: cover;
 }
 
 .type2 {
-  background: url(../img/activity.jpg) no-repeat 50% 50%;
+  background: url(../img/activity.png) no-repeat 50% 50%;
   background-size: cover;
 }
 
